unifi-voucher-manager/unifi-voucher-manager-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi-voucher-manager
  labels:
    app.kubernetes.io/name: unifi-voucher-manager
    app.kubernetes.io/component: workflow-automation
    app.kubernetes.io/managed-by: kubectl
