unifi-voucher-manager/unifi-voucher-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-voucher-manager
  namespace: unifi-voucher-manager
  labels:
    app.kubernetes.io/name: unifi-voucher-manager
    app.kubernetes.io/component: workflow-automation
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi-voucher-manager
      app.kubernetes.io/component: workflow-automation
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi-voucher-manager
        app.kubernetes.io/component: workflow-automation
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: unifi-voucher-manager
          image: ghcr.io/etiennecollin/unifi-voucher-manager:1.2.1
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
