unifi-voucher-manager/unifi-voucher-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-voucher-manager
  namespace: unifi-voucher-manager
  labels:
    app.kubernetes.io/name: unifi-voucher-manager
    app.kubernetes.io/component: workflow-automation
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: unifi-voucher-manager
    app.kubernetes.io/component: workflow-automation
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
