unifi-voucher-manager/unifi-voucher-manager-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-voucher-manager
  namespace: unifi-voucher-manager
  labels:
    app.kubernetes.io/name: unifi-voucher-manager
    app.kubernetes.io/component: ingress
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wifi.albinmedoc.se`)
      kind: Rule
      services:
        - name: unifi-voucher-manager
          port: 3000
